<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="title_bmi_calculator">BMI Calculator</string>
    <string name="hint_weight">Enter weight (kg)</string>
    <string name="hint_height">Enter height (m)</string>
    <string name="button_calculate">Calculate BMI</string>
    <string name="text_result_placeholder">Result will appear here</string>
    <string name="error_empty_fields">Please enter both weight and height</string>
    <string name="bmi_format">BMI: %.2f\n%s</string>
    <string name="underweight">Underweight</string>
    <string name="normal_weight">Normal weight</string>
    <string name="overweight">Overweight</string>
    <string name="obesity_class_1">Obesity Class I</string>
    <string name="obesity_class_2">Obesity Class II</string>
    <string name="obesity_class_3">Obesity Class III</string>
</resources>
